--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,8 +33,12 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAnMot
 excludes=
+file.reference.activation.jar=thuvien\\activation.jar
+file.reference.com.sun.net.ssl.jar=thuvien\\com.sun.net.ssl.jar
+file.reference.javax.mail.jar=thuvien\\javax.mail.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-1=C:\\Users\\84868\\Desktop\\Java1\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
+file.reference.mssql-jdbc-9.2.1.jre15.jar-2=thuvien\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.sqljdbc42.jar=D:\\sqlsever\\sqljdbc42.jar
 includes=**
 jar.compress=false
@@ -42,7 +46,11 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mssql-jdbc-9.2.1.jre15.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-1}
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-1}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-2}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.com.sun.net.ssl.jar}:\
+    ${file.reference.javax.mail.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
