--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\Huong\\AppData\\Roaming\\NetBeans\\12.3\\build.properties
+user.properties.file=C:\\Users\\nhatd\\AppData\\Roaming\\NetBeans\\12.5\\build.properties
