--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ file.reference.javax.mail.jar=thuvien\\javax.mail.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-1=C:\\Users\\84868\\Desktop\\Java1\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-2=thuvien\\mssql-jdbc-9.2.1.jre15.jar
+file.reference.mssql-jdbc-9.2.1.jre15.jar-3=D:\\DowloadNetBeans\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.sqljdbc42.jar=D:\\sqlsever\\sqljdbc42.jar
 includes=**
 jar.compress=false
@@ -50,7 +51,8 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-9.2.1.jre15.jar-2}:\
     ${file.reference.activation.jar}:\
     ${file.reference.com.sun.net.ssl.jar}:\
-    ${file.reference.javax.mail.jar}
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-3}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
