--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,6 +35,7 @@ dist.jlink.output=${dist.jlink.dir}/DuAnMot
 excludes=
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-1=C:\\Users\\84868\\Desktop\\Java1\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
+file.reference.mssql-jdbc-9.2.1.jre15.jar-2=C:\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.sqljdbc42.jar=D:\\sqlsever\\sqljdbc42.jar
 includes=**
 jar.compress=false
@@ -42,7 +43,8 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mssql-jdbc-9.2.1.jre15.jar}:\
     ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-1}
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-1}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
