Code QLTaiKhoan(Them,sua,xoa email va sdt)

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,8 +36,11 @@ dist.jlink.output=${dist.jlink.dir}/DuAnMot
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=thuvien\\activation.jar
+file.reference.activation.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\activation.jar
 file.reference.com.sun.net.ssl.jar=thuvien\\com.sun.net.ssl.jar
+file.reference.com.sun.net.ssl.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\com.sun.net.ssl.jar
 file.reference.javax.mail.jar=thuvien\\javax.mail.jar
+file.reference.javax.mail.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\javax.mail.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-1=C:\\Users\\84868\\Desktop\\Java1\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-2=thuvien\\mssql-jdbc-9.2.1.jre15.jar
@@ -54,7 +57,10 @@ javac.classpath=\
     ${file.reference.activation.jar}:\
     ${file.reference.com.sun.net.ssl.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-3}
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-3}:\
+    ${file.reference.activation.jar-1}:\
+    ${file.reference.com.sun.net.ssl.jar-1}:\
+    ${file.reference.javax.mail.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
