--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,19 +39,23 @@ file.reference.activation.jar=thuvien\\activation.jar
 file.reference.activation.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\activation.jar
 file.reference.activation.jar-2=D:\\DownloadFromChrome\\thuvien\\activation.jar
 file.reference.activation.jar-3=C:\\sqljdbc_9.2\\thuvien\\activation.jar
+file.reference.activation.jar-4=D:\\thuvien\\activation.jar
 file.reference.com.sun.net.ssl.jar=thuvien\\com.sun.net.ssl.jar
 file.reference.com.sun.net.ssl.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\com.sun.net.ssl.jar
 file.reference.com.sun.net.ssl.jar-2=D:\\DownloadFromChrome\\thuvien\\com.sun.net.ssl.jar
 file.reference.com.sun.net.ssl.jar-3=C:\\sqljdbc_9.2\\thuvien\\com.sun.net.ssl.jar
+file.reference.com.sun.net.ssl.jar-4=D:\\thuvien\\com.sun.net.ssl.jar
 file.reference.javax.mail.jar=thuvien\\javax.mail.jar
 file.reference.javax.mail.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\javax.mail.jar
 file.reference.javax.mail.jar-2=D:\\DownloadFromChrome\\thuvien\\javax.mail.jar
 file.reference.javax.mail.jar-3=C:\\sqljdbc_9.2\\thuvien\\javax.mail.jar
+file.reference.javax.mail.jar-4=D:\\thuvien\\javax.mail.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-1=C:\\Users\\84868\\Desktop\\Java1\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-2=thuvien\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-3=D:\\DowloadNetBeans\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-4=C:\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
+file.reference.mssql-jdbc-9.2.1.jre15.jar-5=D:\\thuvien\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.sqljdbc42.jar=D:\\sqlsever\\sqljdbc42.jar
 includes=**
 jar.compress=false
@@ -74,7 +78,11 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-9.2.1.jre15.jar-4}:\
     ${file.reference.activation.jar-3}:\
     ${file.reference.com.sun.net.ssl.jar-3}:\
-    ${file.reference.javax.mail.jar-3}
+    ${file.reference.javax.mail.jar-3}:\
+    ${file.reference.activation.jar-4}:\
+    ${file.reference.com.sun.net.ssl.jar-4}:\
+    ${file.reference.javax.mail.jar-4}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-5}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -110,7 +118,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DuAnMot
-main.class=duanmot.DuAnMot
+main.class=UI.QuanLy.QuanLyHome
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
