Them_Bieu_do_thong_ke

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -47,6 +47,7 @@ file.reference.javax.mail.jar=thuvien\\javax.mail.jar
 file.reference.javax.mail.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\javax.mail.jar
 file.reference.javax.mail.jar-2=D:\\DownloadFromChrome\\thuvien\\javax.mail.jar
 file.reference.javax.mail.jar-3=C:\\sqljdbc_9.2\\thuvien\\javax.mail.jar
+file.reference.jfreechart-demo-1.5.2-jar-with-dependencies.jar=D:\\Compressed\\sqljdbc_9.2\\thuvien\\jfreechart-demo-1.5.2-jar-with-dependencies.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-1=C:\\Users\\84868\\Desktop\\Java1\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-2=thuvien\\mssql-jdbc-9.2.1.jre15.jar
@@ -74,7 +75,8 @@ javac.classpath=\
     ${file.reference.mssql-jdbc-9.2.1.jre15.jar-4}:\
     ${file.reference.activation.jar-3}:\
     ${file.reference.com.sun.net.ssl.jar-3}:\
-    ${file.reference.javax.mail.jar-3}
+    ${file.reference.javax.mail.jar-3}:\
+    ${file.reference.jfreechart-demo-1.5.2-jar-with-dependencies.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
