Code Xuat File Excel

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,46 +35,36 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAnMot
 endorsed.classpath=
 excludes=
-file.reference.activation.jar=thuvien\\activation.jar
 file.reference.activation.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\activation.jar
-file.reference.activation.jar-2=D:\\DownloadFromChrome\\thuvien\\activation.jar
-file.reference.activation.jar-3=C:\\sqljdbc_9.2\\thuvien\\activation.jar
-file.reference.com.sun.net.ssl.jar=thuvien\\com.sun.net.ssl.jar
 file.reference.com.sun.net.ssl.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\com.sun.net.ssl.jar
-file.reference.com.sun.net.ssl.jar-2=D:\\DownloadFromChrome\\thuvien\\com.sun.net.ssl.jar
-file.reference.com.sun.net.ssl.jar-3=C:\\sqljdbc_9.2\\thuvien\\com.sun.net.ssl.jar
-file.reference.javax.mail.jar=thuvien\\javax.mail.jar
-file.reference.javax.mail.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\javax.mail.jar
-file.reference.javax.mail.jar-2=D:\\DownloadFromChrome\\thuvien\\javax.mail.jar
-file.reference.javax.mail.jar-3=C:\\sqljdbc_9.2\\thuvien\\javax.mail.jar
+file.reference.commons-codec-1.15.jar=D:\\Compressed\\excel\\commons-codec-1.15.jar
+file.reference.commons-collections4-4.4.jar=D:\\Compressed\\excel\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.21.jar=D:\\Compressed\\excel\\commons-compress-1.21.jar
+file.reference.commons-io-2.11.0.jar=D:\\Compressed\\commons-io-2.11.0\\commons-io-2.11.0.jar
+file.reference.javax.mail.jar=D:\\Compressed\\sqljdbc_9.2\\thuvien\\javax.mail.jar
+file.reference.log4j-api-2.14.1.jar=D:\\Compressed\\poi-bin-5.1.0\\lib\\log4j-api-2.14.1.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
-file.reference.mssql-jdbc-9.2.1.jre15.jar-1=C:\\Users\\84868\\Desktop\\Java1\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
-file.reference.mssql-jdbc-9.2.1.jre15.jar-2=thuvien\\mssql-jdbc-9.2.1.jre15.jar
-file.reference.mssql-jdbc-9.2.1.jre15.jar-3=D:\\DowloadNetBeans\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
-file.reference.mssql-jdbc-9.2.1.jre15.jar-4=C:\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
-file.reference.sqljdbc42.jar=D:\\sqlsever\\sqljdbc42.jar
+file.reference.poi-5.1.0.jar=D:\\Compressed\\excel\\poi-5.1.0.jar
+file.reference.poi-ooxml-5.1.0.jar=D:\\Compressed\\poi-bin-5.1.0\\poi-ooxml-5.1.0.jar
+file.reference.poi-ooxml-full-5.1.0.jar=D:\\Compressed\\excel\\poi-ooxml-full-5.1.0.jar
+file.reference.xmlbeans-5.0.2.jar=D:\\Compressed\\excel\\xmlbeans-5.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.mssql-jdbc-9.2.1.jre15.jar}:\
-    ${file.reference.sqljdbc42.jar}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-1}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-2}:\
-    ${file.reference.activation.jar}:\
-    ${file.reference.com.sun.net.ssl.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-3}:\
     ${file.reference.activation.jar-1}:\
     ${file.reference.com.sun.net.ssl.jar-1}:\
-    ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.activation.jar-2}:\
-    ${file.reference.com.sun.net.ssl.jar-2}:\
-    ${file.reference.javax.mail.jar-2}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-4}:\
-    ${file.reference.activation.jar-3}:\
-    ${file.reference.com.sun.net.ssl.jar-3}:\
-    ${file.reference.javax.mail.jar-3}
+    ${file.reference.commons-codec-1.15.jar}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.21.jar}:\
+    ${file.reference.poi-5.1.0.jar}:\
+    ${file.reference.poi-ooxml-full-5.1.0.jar}:\
+    ${file.reference.xmlbeans-5.0.2.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.poi-ooxml-5.1.0.jar}:\
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.log4j-api-2.14.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
