--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -42,7 +42,6 @@ file.reference.commons-collections4-4.4.jar=D:\\Compressed\\excel\\commons-colle
 file.reference.commons-compress-1.21.jar=D:\\Compressed\\excel\\commons-compress-1.21.jar
 file.reference.commons-io-2.11.0.jar=D:\\Compressed\\commons-io-2.11.0\\commons-io-2.11.0.jar
 file.reference.javax.mail.jar=D:\\Compressed\\sqljdbc_9.2\\thuvien\\javax.mail.jar
-file.reference.log4j-api-2.14.1.jar=D:\\Compressed\\poi-bin-5.1.0\\lib\\log4j-api-2.14.1.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.poi-5.1.0.jar=D:\\Compressed\\excel\\poi-5.1.0.jar
 file.reference.poi-ooxml-5.1.0.jar=D:\\Compressed\\poi-bin-5.1.0\\poi-ooxml-5.1.0.jar
@@ -63,8 +62,7 @@ javac.classpath=\
     ${file.reference.xmlbeans-5.0.2.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.poi-ooxml-5.1.0.jar}:\
-    ${file.reference.commons-io-2.11.0.jar}:\
-    ${file.reference.log4j-api-2.14.1.jar}
+    ${file.reference.commons-io-2.11.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
