Sua dat lich nguoi dung

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -35,17 +35,30 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/DuAnMot
 endorsed.classpath=
 excludes=
+file.reference.activation.jar=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\activation.jar
 file.reference.activation.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\activation.jar
+file.reference.com.sun.net.ssl.jar=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\com.sun.net.ssl.jar
 file.reference.com.sun.net.ssl.jar-1=D:\\Compressed\\sqljdbc_9.2\\thuvien\\com.sun.net.ssl.jar
 file.reference.commons-codec-1.15.jar=D:\\Compressed\\excel\\commons-codec-1.15.jar
+file.reference.commons-codec-1.15.jar-1=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\commons-codec-1.15.jar
 file.reference.commons-collections4-4.4.jar=D:\\Compressed\\excel\\commons-collections4-4.4.jar
+file.reference.commons-collections4-4.4.jar-1=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.20.jar=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\commons-compress-1.20.jar
 file.reference.commons-compress-1.21.jar=D:\\Compressed\\excel\\commons-compress-1.21.jar
 file.reference.commons-io-2.11.0.jar=D:\\Compressed\\commons-io-2.11.0\\commons-io-2.11.0.jar
 file.reference.javax.mail.jar=D:\\Compressed\\sqljdbc_9.2\\thuvien\\javax.mail.jar
+file.reference.javax.mail.jar-1=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\javax.mail.jar
+file.reference.jcalendar-1.4.jar=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\jcalendar-1.4.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
+file.reference.mssql-jdbc-9.2.1.jre15.jar-1=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\mssql-jdbc-9.2.1.jre15.jar
+file.reference.mssql-jdbc-9.2.1.jre15.jar-2=C:\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
+file.reference.poi-5.0.0.jar=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\poi-5.0.0.jar
 file.reference.poi-5.1.0.jar=D:\\Compressed\\excel\\poi-5.1.0.jar
+file.reference.poi-ooxml-5.0.0.jar=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\poi-ooxml-5.0.0.jar
 file.reference.poi-ooxml-5.1.0.jar=D:\\Compressed\\poi-bin-5.1.0\\poi-ooxml-5.1.0.jar
+file.reference.poi-ooxml-full-5.0.0.jar=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\poi-ooxml-full-5.0.0.jar
 file.reference.poi-ooxml-full-5.1.0.jar=D:\\Compressed\\excel\\poi-ooxml-full-5.1.0.jar
+file.reference.xmlbeans-4.0.0.jar=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\xmlbeans-4.0.0.jar
 file.reference.xmlbeans-5.0.2.jar=D:\\Compressed\\excel\\xmlbeans-5.0.2.jar
 includes=**
 jar.compress=false
@@ -62,7 +75,20 @@ javac.classpath=\
     ${file.reference.xmlbeans-5.0.2.jar}:\
     ${file.reference.javax.mail.jar}:\
     ${file.reference.poi-ooxml-5.1.0.jar}:\
-    ${file.reference.commons-io-2.11.0.jar}
+    ${file.reference.commons-io-2.11.0.jar}:\
+    ${file.reference.activation.jar}:\
+    ${file.reference.com.sun.net.ssl.jar}:\
+    ${file.reference.commons-codec-1.15.jar-1}:\
+    ${file.reference.commons-collections4-4.4.jar-1}:\
+    ${file.reference.commons-compress-1.20.jar}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-1}:\
+    ${file.reference.poi-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-full-5.0.0.jar}:\
+    ${file.reference.xmlbeans-4.0.0.jar}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
