Fix Xuat Hoa Don

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -49,6 +49,7 @@ file.reference.commons-io-2.11.0.jar=D:\\Compressed\\commons-io-2.11.0\\commons-
 file.reference.javax.mail.jar=D:\\Compressed\\sqljdbc_9.2\\thuvien\\javax.mail.jar
 file.reference.javax.mail.jar-1=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\javax.mail.jar
 file.reference.jcalendar-1.4.jar=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\jcalendar-1.4.jar
+file.reference.log4j-api-2.14.1.jar=D:\\Compressed\\poi-bin-5.1.0\\lib\\log4j-api-2.14.1.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=D:\\Compressed\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-1=D:\\Ph\u1ea7n m\u1ec1m h\u1ecdc t\u1eadp\\Ph\u1ee5\\thuvien\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar-2=C:\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
@@ -88,7 +89,8 @@ javac.classpath=\
     ${file.reference.poi-ooxml-5.0.0.jar}:\
     ${file.reference.poi-ooxml-full-5.0.0.jar}:\
     ${file.reference.xmlbeans-4.0.0.jar}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-2}
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-2}:\
+    ${file.reference.log4j-api-2.14.1.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
