--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,18 +36,31 @@ dist.jlink.output=${dist.jlink.dir}/DuAnMot
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=C:\\sqljdbc_9.2\\ThuVienFull\\activation.jar
+file.reference.activation.jar-1=D:\\ThuVienFull\\activation.jar
 file.reference.com.sun.net.ssl.jar=C:\\sqljdbc_9.2\\ThuVienFull\\com.sun.net.ssl.jar
+file.reference.com.sun.net.ssl.jar-1=D:\\ThuVienFull\\com.sun.net.ssl.jar
 file.reference.commons-codec-1.15.jar=C:\\sqljdbc_9.2\\ThuVienFull\\commons-codec-1.15.jar
+file.reference.commons-codec-1.15.jar-1=D:\\ThuVienFull\\commons-codec-1.15.jar
 file.reference.commons-collections4-4.4.jar=C:\\sqljdbc_9.2\\ThuVienFull\\commons-collections4-4.4.jar
+file.reference.commons-collections4-4.4.jar-1=D:\\ThuVienFull\\commons-collections4-4.4.jar
 file.reference.commons-compress-1.21.jar=C:\\sqljdbc_9.2\\ThuVienFull\\commons-compress-1.21.jar
+file.reference.commons-compress-1.21.jar-1=D:\\ThuVienFull\\commons-compress-1.21.jar
 file.reference.commons-io-2.11.0.jar=C:\\sqljdbc_9.2\\ThuVienFull\\commons-io-2.11.0.jar
+file.reference.commons-io-2.11.0.jar-1=D:\\ThuVienFull\\commons-io-2.11.0.jar
 file.reference.javax.mail.jar=C:\\sqljdbc_9.2\\ThuVienFull\\javax.mail.jar
+file.reference.javax.mail.jar-1=D:\\ThuVienFull\\javax.mail.jar
 file.reference.log4j-api-2.14.1.jar=C:\\sqljdbc_9.2\\ThuVienFull\\log4j-api-2.14.1.jar
+file.reference.log4j-api-2.14.1.jar-1=D:\\ThuVienFull\\log4j-api-2.14.1.jar
 file.reference.mssql-jdbc-9.2.1.jre15.jar=C:\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
+file.reference.mssql-jdbc-9.2.1.jre15.jar-1=D:\\ThuVienFull\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.poi-5.1.0.jar=C:\\sqljdbc_9.2\\ThuVienFull\\poi-5.1.0.jar
+file.reference.poi-5.1.0.jar-1=D:\\ThuVienFull\\poi-5.1.0.jar
 file.reference.poi-ooxml-5.1.0.jar=C:\\sqljdbc_9.2\\ThuVienFull\\poi-ooxml-5.1.0.jar
+file.reference.poi-ooxml-5.1.0.jar-1=D:\\ThuVienFull\\poi-ooxml-5.1.0.jar
 file.reference.poi-ooxml-full-5.1.0.jar=C:\\sqljdbc_9.2\\ThuVienFull\\poi-ooxml-full-5.1.0.jar
+file.reference.poi-ooxml-full-5.1.0.jar-1=D:\\ThuVienFull\\poi-ooxml-full-5.1.0.jar
 file.reference.xmlbeans-5.0.2.jar=C:\\sqljdbc_9.2\\ThuVienFull\\xmlbeans-5.0.2.jar
+file.reference.xmlbeans-5.0.2.jar-1=D:\\ThuVienFull\\xmlbeans-5.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -64,7 +77,20 @@ javac.classpath=\
     ${file.reference.poi-5.1.0.jar}:\
     ${file.reference.poi-ooxml-5.1.0.jar}:\
     ${file.reference.poi-ooxml-full-5.1.0.jar}:\
-    ${file.reference.xmlbeans-5.0.2.jar}
+    ${file.reference.xmlbeans-5.0.2.jar}:\
+    ${file.reference.activation.jar-1}:\
+    ${file.reference.com.sun.net.ssl.jar-1}:\
+    ${file.reference.commons-codec-1.15.jar-1}:\
+    ${file.reference.commons-collections4-4.4.jar-1}:\
+    ${file.reference.commons-compress-1.21.jar-1}:\
+    ${file.reference.commons-io-2.11.0.jar-1}:\
+    ${file.reference.javax.mail.jar-1}:\
+    ${file.reference.log4j-api-2.14.1.jar-1}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-1}:\
+    ${file.reference.poi-5.1.0.jar-1}:\
+    ${file.reference.poi-ooxml-5.1.0.jar-1}:\
+    ${file.reference.poi-ooxml-full-5.1.0.jar-1}:\
+    ${file.reference.xmlbeans-5.0.2.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
