--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -36,61 +36,47 @@ dist.jlink.output=${dist.jlink.dir}/DuAnMot
 endorsed.classpath=
 excludes=
 file.reference.activation.jar=C:\\sqljdbc_9.2\\ThuVienFull\\activation.jar
-file.reference.activation.jar-1=D:\\ThuVienFull\\activation.jar
+file.reference.activation.jar-2=ThuVienFull\\activation.jar
 file.reference.com.sun.net.ssl.jar=C:\\sqljdbc_9.2\\ThuVienFull\\com.sun.net.ssl.jar
-file.reference.com.sun.net.ssl.jar-1=D:\\ThuVienFull\\com.sun.net.ssl.jar
+file.reference.com.sun.net.ssl.jar-2=ThuVienFull\\com.sun.net.ssl.jar
 file.reference.commons-codec-1.15.jar=C:\\sqljdbc_9.2\\ThuVienFull\\commons-codec-1.15.jar
-file.reference.commons-codec-1.15.jar-1=D:\\ThuVienFull\\commons-codec-1.15.jar
+file.reference.commons-codec-1.15.jar-2=ThuVienFull\\commons-codec-1.15.jar
 file.reference.commons-collections4-4.4.jar=C:\\sqljdbc_9.2\\ThuVienFull\\commons-collections4-4.4.jar
-file.reference.commons-collections4-4.4.jar-1=D:\\ThuVienFull\\commons-collections4-4.4.jar
+file.reference.commons-collections4-4.4.jar-2=ThuVienFull\\commons-collections4-4.4.jar
 file.reference.commons-compress-1.21.jar=C:\\sqljdbc_9.2\\ThuVienFull\\commons-compress-1.21.jar
-file.reference.commons-compress-1.21.jar-1=D:\\ThuVienFull\\commons-compress-1.21.jar
+file.reference.commons-compress-1.21.jar-2=ThuVienFull\\commons-compress-1.21.jar
 file.reference.commons-io-2.11.0.jar=C:\\sqljdbc_9.2\\ThuVienFull\\commons-io-2.11.0.jar
-file.reference.commons-io-2.11.0.jar-1=D:\\ThuVienFull\\commons-io-2.11.0.jar
+file.reference.commons-io-2.11.0.jar-2=ThuVienFull\\commons-io-2.11.0.jar
 file.reference.javax.mail.jar=C:\\sqljdbc_9.2\\ThuVienFull\\javax.mail.jar
-file.reference.javax.mail.jar-1=D:\\ThuVienFull\\javax.mail.jar
+file.reference.javax.mail.jar-2=ThuVienFull\\javax.mail.jar
 file.reference.log4j-api-2.14.1.jar=C:\\sqljdbc_9.2\\ThuVienFull\\log4j-api-2.14.1.jar
-file.reference.log4j-api-2.14.1.jar-1=D:\\ThuVienFull\\log4j-api-2.14.1.jar
-file.reference.mssql-jdbc-9.2.1.jre15.jar=C:\\sqljdbc_9.2\\enu\\mssql-jdbc-9.2.1.jre15.jar
-file.reference.mssql-jdbc-9.2.1.jre15.jar-1=D:\\ThuVienFull\\mssql-jdbc-9.2.1.jre15.jar
+file.reference.log4j-api-2.14.1.jar-2=ThuVienFull\\log4j-api-2.14.1.jar
+file.reference.mssql-jdbc-9.2.1.jre15.jar-2=ThuVienFull\\mssql-jdbc-9.2.1.jre15.jar
 file.reference.poi-5.1.0.jar=C:\\sqljdbc_9.2\\ThuVienFull\\poi-5.1.0.jar
-file.reference.poi-5.1.0.jar-1=D:\\ThuVienFull\\poi-5.1.0.jar
+file.reference.poi-5.1.0.jar-2=ThuVienFull\\poi-5.1.0.jar
 file.reference.poi-ooxml-5.1.0.jar=C:\\sqljdbc_9.2\\ThuVienFull\\poi-ooxml-5.1.0.jar
-file.reference.poi-ooxml-5.1.0.jar-1=D:\\ThuVienFull\\poi-ooxml-5.1.0.jar
+file.reference.poi-ooxml-5.1.0.jar-2=ThuVienFull\\poi-ooxml-5.1.0.jar
 file.reference.poi-ooxml-full-5.1.0.jar=C:\\sqljdbc_9.2\\ThuVienFull\\poi-ooxml-full-5.1.0.jar
-file.reference.poi-ooxml-full-5.1.0.jar-1=D:\\ThuVienFull\\poi-ooxml-full-5.1.0.jar
+file.reference.poi-ooxml-full-5.1.0.jar-2=ThuVienFull\\poi-ooxml-full-5.1.0.jar
 file.reference.xmlbeans-5.0.2.jar=C:\\sqljdbc_9.2\\ThuVienFull\\xmlbeans-5.0.2.jar
-file.reference.xmlbeans-5.0.2.jar-1=D:\\ThuVienFull\\xmlbeans-5.0.2.jar
+file.reference.xmlbeans-5.0.2.jar-2=ThuVienFull\\xmlbeans-5.0.2.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar}:\
-    ${file.reference.activation.jar}:\
-    ${file.reference.com.sun.net.ssl.jar}:\
-    ${file.reference.commons-codec-1.15.jar}:\
-    ${file.reference.commons-collections4-4.4.jar}:\
-    ${file.reference.commons-compress-1.21.jar}:\
-    ${file.reference.commons-io-2.11.0.jar}:\
-    ${file.reference.javax.mail.jar}:\
-    ${file.reference.log4j-api-2.14.1.jar}:\
-    ${file.reference.poi-5.1.0.jar}:\
-    ${file.reference.poi-ooxml-5.1.0.jar}:\
-    ${file.reference.poi-ooxml-full-5.1.0.jar}:\
-    ${file.reference.xmlbeans-5.0.2.jar}:\
-    ${file.reference.activation.jar-1}:\
-    ${file.reference.com.sun.net.ssl.jar-1}:\
-    ${file.reference.commons-codec-1.15.jar-1}:\
-    ${file.reference.commons-collections4-4.4.jar-1}:\
-    ${file.reference.commons-compress-1.21.jar-1}:\
-    ${file.reference.commons-io-2.11.0.jar-1}:\
-    ${file.reference.javax.mail.jar-1}:\
-    ${file.reference.log4j-api-2.14.1.jar-1}:\
-    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-1}:\
-    ${file.reference.poi-5.1.0.jar-1}:\
-    ${file.reference.poi-ooxml-5.1.0.jar-1}:\
-    ${file.reference.poi-ooxml-full-5.1.0.jar-1}:\
-    ${file.reference.xmlbeans-5.0.2.jar-1}
+    ${file.reference.activation.jar-2}:\
+    ${file.reference.com.sun.net.ssl.jar-2}:\
+    ${file.reference.commons-codec-1.15.jar-2}:\
+    ${file.reference.commons-collections4-4.4.jar-2}:\
+    ${file.reference.commons-compress-1.21.jar-2}:\
+    ${file.reference.commons-io-2.11.0.jar-2}:\
+    ${file.reference.javax.mail.jar-2}:\
+    ${file.reference.log4j-api-2.14.1.jar-2}:\
+    ${file.reference.mssql-jdbc-9.2.1.jre15.jar-2}:\
+    ${file.reference.poi-5.1.0.jar-2}:\
+    ${file.reference.poi-ooxml-5.1.0.jar-2}:\
+    ${file.reference.poi-ooxml-full-5.1.0.jar-2}:\
+    ${file.reference.xmlbeans-5.0.2.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -138,7 +124,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=DuAnMot
-main.class=duanmot.DuAnMot
+main.class=UI.ManHinhChao
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
